[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM Precompiles - Ethereum compatible precompiled contracts"
edition = "2021"
keywords = ["no_std", "ethereum", "evm", "revm", "precompiles"]
license = "MIT"
name = "revm_precompiles"
repository = "https://github.com/bluealloy/revm"
version = "2.0.1"

[dependencies]

[features]

